--- a/style.css
+++ b/style.css
@@ -91,7 +91,16 @@ h1 {
   border-style: solid;
 }
 
-/* Right Arrows */
+/* Right Side Arrows */
 #timeline ul li:nth-child(odd) div:before {
   left: -15px;
+  border-width: 8px 16px 8px 0;
+  border-color: transparent var(--secondary-color) transparent transparent;
+}
+
+/* Left Side Arrows */
+#timeline ul li:nth-child(even) div:before {
+  right: -15px;
+  border-width: 8px 0px 8px 16px;
+  border-color: transparent transparent transparent var(--secondary-color);
 }
